// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Tel renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 jqAoOL"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 yCWvw"
        disabled={true}
        placeholder=" "
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 gBLEES"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 jvXSNE"
      >
        <input
          className="Input-qkdgvx-0 bTDZWF"
          disabled={true}
          placeholder=" "
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 kwpJwN"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 dSfsRu"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 jvXSNE"
      >
        <input
          className="Input-qkdgvx-0 gKjnuf"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 heGnbI"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 jqAoOL"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 yCWvw"
        placeholder=" "
        readOnly={true}
        type="tel"
        value="+372 123 4567"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 jvXSNE"
      >
        <input
          className="Input-qkdgvx-0 bTDZWF"
          placeholder=" "
          readOnly={true}
          type="tel"
          value="+372 123 4567"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 jqAoOL"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 yCWvw"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 jvXSNE"
      >
        <input
          className="Input-qkdgvx-0 bTDZWF"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 jqAoOL"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 yCWvw"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 jvXSNE"
      >
        <input
          className="Input-qkdgvx-0 bTDZWF"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 jqAoOL"
        placeholder="medium"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <input
        className="Input-qkdgvx-0 yCWvw"
        placeholder="large"
        type="tel"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 jvXSNE"
      >
        <input
          className="Input-qkdgvx-0 kwsobc"
          placeholder="xlarge"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Tel supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        medium
      </label>
      <input
        className="Input-qkdgvx-0 cgHTJu"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <label
        className="Label-sc-1rdea5p-0 fGPqtd"
      >
        large
      </label>
      <input
        className="Input-qkdgvx-0 hAmOHl"
        placeholder="e.g. +372 123 4567"
        type="tel"
      />
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 fVKDpE"
    >
      <div
        className="Inner-sc-1soq84i-0 hYWLpt"
      >
        <input
          className="Input-qkdgvx-0 bTDZWF"
          placeholder="e.g. +372 123 4567"
          type="tel"
        />
        <label
          className="LabelInner-vrrjt0-0 deQKxJ"
        >
          xlarge
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 dfhEvA"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
